--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,11 +7,11 @@ body {
 }
 
 a {
-  color: #149ddd;
+  color: #dd7f14;
 }
 
 a:hover {
-  color: #37b3ed;
+  color: #dd7f14;
   text-decoration: none;
 }
 
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   right: 15px;
   bottom: 15px;
-  background: #149ddd;
+  background: #dd7f14;
   color: #fff;
   transition: display 0.5s ease-in-out;
   z-index: 99999;
@@ -45,7 +45,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .back-to-top:hover {
   color: #fff;
-  background: #2eafec;
+  background: #dd7f14;
   transition: background 0.2s ease-in-out;
 }
 
@@ -104,7 +104,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .profile .social-links a:hover {
-  background: #149ddd;
+  background: #dd7f14;
   color: #fff;
   text-decoration: none;
 }
@@ -163,7 +163,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu a:hover i, .nav-menu .active > a i, .nav-menu li:hover > a i {
-  color: #149ddd;
+  color: #dd7f14;
 }
 
 /* Mobile Navigation */
@@ -183,7 +183,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav-toggle i {
-  color: #149ddd;
+  color: #dd7f14;
 }
 
 .mobile-nav-active {
@@ -244,7 +244,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   padding-bottom: 4px;
   letter-spacing: 1px;
-  border-bottom: 3px solid #149ddd;
+  border-bottom: 3px solid #dd7f14;
 }
 
 @media (min-width: 1024px) {
@@ -296,7 +296,7 @@ section {
   display: block;
   width: 50px;
   height: 3px;
-  background: #149ddd;
+  background: #dd7f14;
   bottom: 0;
   left: 0;
 }
@@ -326,7 +326,7 @@ section {
 .about .content ul i {
   font-size: 20px;
   padding-right: 2px;
-  color: #149ddd;
+  color: #dd7f14;
 }
 
 .about .content p:last-child {
@@ -348,7 +348,7 @@ section {
 .facts .count-box i {
   display: block;
   font-size: 44px;
-  color: #149ddd;
+  color: #dd7f14;
   float: left;
 }
 
@@ -415,7 +415,7 @@ section {
   width: 1px;
   height: 10px;
   transition: .9s;
-  background-color: #149ddd;
+  background-color: #dd7f14;
 }
 
 /*--------------------------------------------------------------
@@ -553,17 +553,17 @@ section {
   color: #fff;
   font-size: 28px;
   text-align: center;
-  background: rgba(20, 157, 221, 0.75);
+  background: rgba(221, 141, 20, 0.75);
   transition: 0.3s;
   width: 50%;
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  background: rgba(20, 157, 221, 0.95);
+  background: rgba(221, 141, 20, 0.75);
 }
 
 .portfolio .portfolio-wrap .portfolio-links a + a {
-  border-left: 1px solid #37b3ed;
+  border-left: 1px solid #dd7f14;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -593,10 +593,10 @@ section {
   justify-content: center;
   width: 54px;
   height: 54px;
-  background: #149ddd;
+  background: #dd7f14;
   border-radius: 50%;
   transition: 0.5s;
-  border: 1px solid #149ddd;
+  border: 1px solid #dd7f14;
 }
 
 .services .icon i {
@@ -609,7 +609,7 @@ section {
 }
 
 .services .icon-box:hover .icon i {
-  color: #149ddd;
+  color: #dd7f14;
 }
 
 .services .title {
@@ -624,7 +624,7 @@ section {
 }
 
 .services .title a:hover {
-  color: #149ddd;
+  color: #dd7f14;
 }
 
 .services .description {
@@ -717,7 +717,7 @@ section {
 }
 
 .testimonials .owl-dot.active {
-  background-color: #149ddd !important;
+  background-color: #dd7f14 !important;
 }
 
 @media (max-width: 767px) {
@@ -742,7 +742,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #149ddd;
+  color: #dd7f14;
   float: left;
   width: 44px;
   height: 44px;
@@ -793,12 +793,12 @@ section {
 }
 
 .contact .info .social-links a:hover {
-  background: #149ddd;
+  background: #dd7f14;
   color: #fff;
 }
 
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #149ddd;
+  background: #dd7f14;
   color: #fff;
 }
 
@@ -878,7 +878,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #149ddd;
+  background: #dd7f14;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -887,7 +887,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: #37b3ed;
+  background: #dd7f14;
 }
 
 @-webkit-keyframes animate-loading {
@@ -984,7 +984,7 @@ section {
 }
 
 .portfolio-details .portfolio-details-carousel .owl-dot.active {
-  background-color: #149ddd !important;
+  background-color: #dd7f14 !important;
 }
 
 .portfolio-details .portfolio-info {
